# computer-graphics

./: .gitignore  computer-graphics.sln  index.md
NeHe/: Readme.md
PBR/: .gitignore  CMakeLists.txt  Readme.md
RTR/: .clang-format  CMakeLists.txt  Readme.md
RTR/RTR/: CMakeLists.txt
RTR/Tests/: CMakeLists.txt
cmu-computer-graphics/: .gitignore  Readme.md
computer-graphics/: computer-graphics.vcxproj
fcg-2nd/: Chapter2.md  Chapter4.md  Chapter5.md  Chapter6.md  Chapter7.md  Readme.md
learn-cuda/: common.h  deviceInfo.cu  histogram.cu  reduceInteger.cu
learn-dx/: .gitignore  learn-dx.sln  learn-dx.vcxproj
learn-opencl/: hello.cpp  pi.cl  pi.cpp
learn-opengl/: advance-lighting.cpp  advance-lighting.fs  anti-aliasing.cpp  anti-aliasing.fs  anti-aliasing.vs  basic-lighting-HW1.cpp  basic-lighting-HW3.cpp  basic-lighting-HW3.vs  basic-lighting-HW4.cpp  basic-lighting-HW4.fs  basic-lighting-HW4.vs  basic-lighting.cpp  basic-lighting.fs  basic-lighting.vs  blending.cpp  blending.fs  camera-HW1.cpp  camera-HW2.cpp  camera.cpp  colors.cpp  colors.fs  coordinate-systems-HW3.cpp  coordinate-systems.cpp  coordinate-systems.fs  coordinate-systems.vs  cubemap-HW1.cpp  cubemap-HW1.fs  cubemap-HW1.vs  cubemap.cpp  cubemap.fs  cubemap.vs  debug.fs  debug.vs  depth-map.vs  depth-testing.cpp  depth-testing.fs  depth-testing.vs  edge.fs  edge.vs  face-culling-HW1.cpp  (+75 more)
learn-vulkan/: README.md
learn-webgpu/: .gitignore  CMakeLists.txt  Note.md  WebGPU.cpp  WebGPU.h  main.cpp
opengl/: basic-lighting-HW1.cpp  basic-lighting-HW3.cpp  basic-lighting-HW3.vs  basic-lighting-HW4.cpp  glad.c  (+53 more)
opengl-tutorial/: opengl-tutorial.vcxproj
ray-tracing/: CMakeLists.txt  Readme.md
ray-tracing/in-a-week/: CMakeLists.txt
ray-tracing/in-a-week/include/: Camera.h  Common.h  Material.h  Sphere.h
ray-tracing/in-a-week/src/: main.cpp
ray-tracing/the-next-week/: CMakeLists.txt
ray-tracing/the-next-week/include/: AABB.h  BvhNode.h  Camera.h  Common.h  Hitable.h  HitableList.h  Material.h  MovingSphere.h  Perlin.h  Ray.h  Rectangle.h  Sphere.h  Texture.h  Vec3.h
ray-tracing/the-next-week/src/: main.cpp
(+125 files in other folders)
